manifests/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-headless
  labels:
    app: api-headless
  annotations:
    app.komodor.com/app: https://github.com/podkrepi-bg/api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-headless
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: api-headless
    spec:
      automountServiceAccountToken: false
      volumes:
        - name: tmp
          emptyDir: {}
      containers:
        - name: api-headless
          image: ghcr.io/podkrepi-bg/api
          imagePullPolicy: Always
          securityContext:
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - NET_RAW
          resources:
            limits:
              memory: 700Mi
              cpu: 1000m
            requests:
              memory: 450Mi
              cpu: 200m
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /api/v1/health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 2
          readinessProbe:
            httpGet:
              path: /api/v1/health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
          startupProbe:
            httpGet:
              path: /api/v1/health
              port: 8080
            failureThreshold: 12
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 2
