manifests/base/api-headless.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: api-headless
spec:
  selector:
    app: api-headless
  clusterIP: None
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-headless
  labels:
    app: api-headless
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-headless
  template:
    metadata:
      labels:
        app: api-headless
    spec:
      containers:
        - name: api-headless
          imagePullPolicy: Always
          resources:
            limits:
              memory: 512Mi
              cpu: '1'
            requests:
              memory: 256Mi
              cpu: '0.2'
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /api/health
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /api/health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
