manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-headless
spec:
  selector:
    app: api-headless
  clusterIP: None
  ports:
    - name: http
      port: 80
      targetPort: 8080
