manifests/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
spec:
  rules:
    - host: podkrepi.bg
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-headless
                port:
                  number: 3040
          - path: /docs
            pathType: Prefix
            backend:
              service:
                name: api-headless
                port:
                  number: 80
          - path: /docs-json
            pathType: Prefix
            backend:
              service:
                name: api-headless
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-headless
                port:
                  number: 80
  tls:
    - hosts:
        - podkrepi.bg
